--- a/style.css
+++ b/style.css
@@ -91,3 +91,11 @@ h5
     letter-spacing: 2px;
     filter: drop-shadow(0 0 20px  rgb(19, 197, 158)) drop-shadow(0 0 60px  rgb(19, 197, 158));
 }
+a
+{
+    font-size: 2em;
+    color: #ffffffdb;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    margin-bottom: 40PX;
+}
